# poc-dta-mcp

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  SETUP.md  demo.py  docker-compose.yml  example_client.py  mcp.json  pyproject.toml  test_server.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.extend.yml
.github/: .copilot-instructions.md
.github/copilot/agents/: data-scientist-agent.md  mcp-developer-agent.md
.github/copilot/instructions/: data-analytics.instructions.md  session-management.instructions.md
database/: init.sql  sample_data.sql
docs/: design.md  requirements.md
src/: __init__.py  database.py  server.py
